--- a/index.html
+++ b/index.html
@@ -8,8 +8,38 @@
 		<title>Tayf Page</title>
 	</head>
 	<body>
-		<header>
-			<h1>home</h1>
-		</header>
+		<section id="privacy-policy">
+			<section>
+				<h1>Integritetspolicy</h1>
+
+				<h2>1. Introduktion</h2>
+				<p>
+					Denna integritetspolicy gäller för Tayf ("appen"), som tillhandahålls
+					av Tayf Barkawi ("vi", "oss"). Vi värnar om din integritet och vill
+					förtydliga hur appen hanterar personuppgifter.
+				</p>
+
+				<h2>2. Insamling av data</h2>
+				<p>Appen samlar inte in, lagrar eller delar några personuppgifter.</p>
+
+				<h2>3. Tredje parter</h2>
+				<p>
+					Eftersom appen inte samlar in någon information, delas heller ingen
+					data med tredje parter.
+				</p>
+
+				<h2>4. Dina rättigheter</h2>
+				<p>
+					Eftersom ingen data samlas in, behöver du inte vidta några åtgärder
+					för att begära åtkomst, ändring eller radering av information.
+				</p>
+
+				<h2>5. Ändringar i integritetspolicyn</h2>
+				<p>
+					Om denna integritetspolicy uppdateras kommer ändringarna att
+					publiceras här.
+				</p>
+			</section>
+		</section>
 	</body>
 </html>
